sfdx/force-app/main/default/objects/Quote__c/Quote__c.object-meta.xml
<CustomObject>
    <label>Quote (CPQ-style)</label>
    <pluralLabel>Quotes (CPQ-style)</pluralLabel>
    <nameField><label>Name</label><type>Text</type></nameField>
    <sharingModel>ReadWrite</sharingModel>
    <description>CPQ-style quote written by the Python policy engine. Decision fields are authoritative; Flows do not recompute them.</description>
</CustomObject>