sfdx/force-app/main/default/objects/Quote__c/fields/Annual_Contract_Value__c.field-meta.xml
<CustomField>
    <fullName>Annual_Contract_Value__c</fullName>
    <label>Annual Contract Value</label>
    <type>Currency</type>
    <precision>18</precision>
    <scale>2</scale>
</CustomField>