sfdx/force-app/main/default/objects/Quote__c/fields/Approval_Route__c.field-meta.xml
<CustomField>
    <fullName>Approval_Route__c</fullName>
    <label>Approval Route</label>
    <type>Text</type>
    <length>255</length>
</CustomField>