sfdx/force-app/main/default/objects/Quote__c/fields/Approval_Status__c.field-meta.xml
<CustomField>
    <fullName>Approval_Status__c</fullName>
    <label>Approval Status</label>
    <type>Picklist</type>
    <valueSet><restricted>true</restricted><valueSetDefinition><sorted>false</sorted><value><fullName>Draft</fullName><default>false</default><label>Draft</label></value><value><fullName>Auto-Approved</fullName><default>false</default><label>Auto-Approved</label></value><value><fullName>Pending Approval</fullName><default>false</default><label>Pending Approval</label></value><value><fullName>Approved</fullName><default>false</default><label>Approved</label></value><value><fullName>Rejected</fullName><default>false</default><label>Rejected</label></value><value><fullName>Failed Validation</fullName><default>false</default><label>Failed Validation</label></value></valueSetDefinition></valueSet>
</CustomField>