sfdx/force-app/main/default/objects/Quote__c/fields/Approver__c.field-meta.xml
<CustomField>
    <fullName>Approver__c</fullName>
    <label>Approver</label>
    <type>Text</type>
    <length>120</length>
</CustomField>