sfdx/force-app/main/default/objects/Quote__c/fields/Contract_Term_Months__c.field-meta.xml
<CustomField>
    <fullName>Contract_Term_Months__c</fullName>
    <label>Contract Term (months)</label>
    <type>Number</type>
    <precision>18</precision>
    <scale>0</scale>
</CustomField>