sfdx/force-app/main/default/objects/Quote__c/fields/Custom_Pricing__c.field-meta.xml
<CustomField>
    <fullName>Custom_Pricing__c</fullName>
    <label>Custom Pricing</label>
    <type>Checkbox</type>
    <defaultValue>false</defaultValue>
</CustomField>