sfdx/force-app/main/default/objects/Quote__c/fields/Discount_Percent__c.field-meta.xml
<CustomField>
    <fullName>Discount_Percent__c</fullName>
    <label>Discount Percent</label>
    <type>Percent</type>
    <precision>18</precision>
    <scale>2</scale>
</CustomField>