sfdx/force-app/main/default/objects/Quote__c/fields/ERP_Order_Id__c.field-meta.xml
<CustomField>
    <fullName>ERP_Order_Id__c</fullName>
    <label>ERP Order Id</label>
    <type>Text</type>
    <length>40</length>
</CustomField>