sfdx/force-app/main/default/objects/Quote__c/fields/ERP_Sent_At__c.field-meta.xml
<CustomField>
    <fullName>ERP_Sent_At__c</fullName>
    <label>ERP Sent At</label>
    <type>DateTime</type>
</CustomField>