sfdx/force-app/main/default/objects/Quote__c/fields/ERP_Status__c.field-meta.xml
<CustomField>
    <fullName>ERP_Status__c</fullName>
    <label>ERP Status</label>
    <type>Picklist</type>
    <valueSet><restricted>true</restricted><valueSetDefinition><sorted>false</sorted><value><fullName>Not Sent</fullName><default>true</default><label>Not Sent</label></value><value><fullName>Sent</fullName><default>false</default><label>Sent</label></value><value><fullName>Reconciled</fullName><default>false</default><label>Reconciled</label></value><value><fullName>Failed</fullName><default>false</default><label>Failed</label></value></valueSetDefinition></valueSet>
</CustomField>