sfdx/force-app/main/default/objects/Quote__c/fields/List_Price__c.field-meta.xml
<CustomField>
    <fullName>List_Price__c</fullName>
    <label>Effective List Price (monthly)</label>
    <type>Currency</type>
    <precision>18</precision>
    <scale>2</scale>
</CustomField>