sfdx/force-app/main/default/objects/Quote__c/fields/Monthly_Commitment__c.field-meta.xml
<CustomField>
    <fullName>Monthly_Commitment__c</fullName>
    <label>Monthly Commitment</label>
    <type>Currency</type>
    <precision>18</precision>
    <scale>2</scale>
</CustomField>