sfdx/force-app/main/default/objects/Quote__c/fields/Payment_Terms__c.field-meta.xml
<CustomField>
    <fullName>Payment_Terms__c</fullName>
    <label>Payment Terms</label>
    <type>Picklist</type>
    <valueSet><restricted>true</restricted><valueSetDefinition><sorted>false</sorted><value><fullName>Net 30</fullName><default>false</default><label>Net 30</label></value><value><fullName>Net 60</fullName><default>false</default><label>Net 60</label></value><value><fullName>Net 90</fullName><default>false</default><label>Net 90</label></value><value><fullName>Annual Prepaid</fullName><default>false</default><label>Annual Prepaid</label></value></valueSetDefinition></valueSet>
</CustomField>