sfdx/force-app/main/default/objects/Quote__c/fields/Policy_Version__c.field-meta.xml
<CustomField>
    <fullName>Policy_Version__c</fullName>
    <label>Policy Version</label>
    <type>Text</type>
    <length>20</length>
</CustomField>