sfdx/force-app/main/default/objects/Quote__c/fields/Product_Id__c.field-meta.xml
<CustomField>
    <fullName>Product_Id__c</fullName>
    <label>Product Id</label>
    <type>Text</type>
    <length>40</length>
</CustomField>