sfdx/force-app/main/default/objects/Quote__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Account__c</columns>
    <columns>Discount_Percent__c</columns>
    <columns>Annual_Contract_Value__c</columns>
    <columns>Payment_Terms__c</columns>
    <columns>Approval_Status__c</columns>
    <columns>Approval_Route__c</columns>
    <columns>Approver__c</columns>
    <columns>ERP_Status__c</columns>
    <filterScope>Everything</filterScope>
    <label>All Quotes</label>
</ListView>